Revision history for POE-Component-OpenSSH
(in the form of DD/MM/YY)

0.04    07.09.09
        * Adding 'error' attribute

0.03    07.09.09
        * A lot of POD work: examples, METHODS documentation, etc.
        * I accidently written I use MooseX::POE for it. I don't.

0.02    07.09.09
        * Adding support for debug, verbose and alias
        * Fixed test to include timeout skip
        * Added a lot to POD
        * Was building obj incorrectly (thanks Perl::Critic)

0.01    03.09.09
        Hope this works
